Renamed files, added readme and CI

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,10 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+# Cake Tools
+tools
+artifacts
+
+# Logs
+SampleApp/Logs
