--- a/test/NetEscapades.Extensions.Logging.RollingFile.Test/NetEscapades.Extensions.Logging.RollingFile.Test.csproj
+++ b/test/NetEscapades.Extensions.Logging.RollingFile.Test/NetEscapades.Extensions.Logging.RollingFile.Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\NetEscapades.AspNetCore.Logging.RollingFile\NetEscapades.AspNetCore.Logging.RollingFile.csproj" />
+    <ProjectReference Include="..\..\src\NetEscapades.Extensions.Logging.RollingFile\NetEscapades.Extensions.Logging.RollingFile.csproj" />
   </ItemGroup>
 
 </Project>
