Fix incorrect sample app path

--- a/sample/SampleApp/SampleApp.csproj
+++ b/sample/SampleApp/SampleApp.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\NetEscapades.Extensions.Logging.RollingFile\NetEscapades.Extensions.Logging.RollingFile.csproj" />
+    <ProjectReference Include="..\..\src\NetEscapades.Extensions.Logging.RollingFile\NetEscapades.Extensions.Logging.RollingFile.csproj" />
   </ItemGroup>
 
 </Project>
