--- a/sample/SampleApp/appsettings.json
+++ b/sample/SampleApp/appsettings.json
@@ -1,12 +1,7 @@
 ﻿{
   "Logging": {
     "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
+    "File": {
       "LogLevel": {
         "Default": "Warning"
       }
