Load file logging options from configuration

--- a/sample/SampleApp/appsettings.json
+++ b/sample/SampleApp/appsettings.json
@@ -6,5 +6,9 @@
         "Default": "Warning"
       }
     }
+  },
+  "FileLoggingOptions":{
+    "FileName": "app-logs-",
+    "FileSizeLimit": 1048576
   }
 }
