--- a/src/NetEscapades.Extensions.Logging.RollingFile/NetEscapades.Extensions.Logging.RollingFile.csproj
+++ b/src/NetEscapades.Extensions.Logging.RollingFile/NetEscapades.Extensions.Logging.RollingFile.csproj
@@ -5,19 +5,14 @@
 
   <PropertyGroup>
     <Description>File logger provider implementation for Microsoft.Extensions.Logging. This logger logs messages to rolling files by writing messages to the file system.</Description>
-    <VersionPrefix>1.0.1</VersionPrefix>
-    <Authors>Andrew Lock</Authors>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <IsPackable>true</IsPackable>
     <AssemblyName>NetEscapades.Extensions.Logging.RollingFile</AssemblyName>
     <PackageId>NetEscapades.Extensions.Logging.RollingFile</PackageId>
     <PackageTags>aspnetcore;logging;file;provider</PackageTags>
-    <PackageProjectUrl>https://github.com/andrewlock/NetEscapades.Extensions.Logging</PackageProjectUrl>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/andrewlock/NetEscapades.Extensions.Logging.RollingFile/master/LICENSE</PackageLicenseUrl>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/andrewlock/NetEscapades.Extensions.Logging.RollingFile</RepositoryUrl><RepositoryType>git</RepositoryType>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
