--- a/sample/SampleApp/appsettings.json
+++ b/sample/SampleApp/appsettings.json
@@ -3,7 +3,7 @@
     "IncludeScopes": false,
     "File": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Information"
       }
     }
   },
