--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
+# Visual Studio Code options directory
+.vscode/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
