--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,7 +8,7 @@
     <Copyright>Copyright © AndrewLock</Copyright>
     <NeutralLanguage>en-GB</NeutralLanguage>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/andrewlock/NetEscapades.Extensions.Logging.RollingFile/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/andrewlock/NetEscapades.Extensions.Logging</PackageProjectUrl>
     <RepositoryUrl>https://github.com/andrewlock/NetEscapades.Extensions.Logging.RollingFile</RepositoryUrl><RepositoryType>git</RepositoryType>
     <RepositoryType>git</RepositoryType>
