--- a/releasenotes.props
+++ b/releasenotes.props
@@ -1,12 +1,11 @@
 <Project>
   <PropertyGroup>
-    <PackageReleaseNotes Condition="'$(VersionPrefix)' == '2.4.0'">
+    <PackageReleaseNotes Condition="'$(VersionPrefix)' == '2.4.1'">
       <![CDATA[
 
 Features:
 
-* Add support for splitting files by filesize (thanks @lafe)
-* Fix bug in AddFile(filename) ignoring file name (thanks @jfoshee)
+* Fix bug in file rolling behaviour (thanks @guillermo-ruffino)
 
 ]]>
     </PackageReleaseNotes>
