--- a/src/NetEscapades.Extensions.Logging.RollingFile/NetEscapades.Extensions.Logging.RollingFile.csproj
+++ b/src/NetEscapades.Extensions.Logging.RollingFile/NetEscapades.Extensions.Logging.RollingFile.csproj
@@ -13,6 +13,7 @@
     <PackageId>NetEscapades.Extensions.Logging.RollingFile</PackageId>
     <PackageTags>aspnetcore;logging;file;provider</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
